--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.min-h-screen{
+    min-height: 0vh;
+}
+
+.body {
+    background-color: pink;
+}
+
+.pinkbutton {
+    background-color: red;
+}
