--- a/src/style.css
+++ b/src/style.css
@@ -7,9 +7,13 @@
 }
 
 .body {
-    background-color: pink;
+    background-color: #F3F4F6 !important;
 }
 
-.pinkbutton {
-    background-color: red;
+.buttonfill {
+    background-color: #212936;
+}
+
+.textfill{
+	color: #8F14E1;
 }
